tests/paczka1/fuzzy1/21189232.err
Error in line 1: A297 S646 23,9
Error in line 4: q8XDdc S646 70,9
Error in line 17: 1mLf S860 72,6
Error in line 20: q8XDdc S860 79,4
Error in line 26: A297 S958 22,9
